--- a/index.html
+++ b/index.html
@@ -145,12 +145,13 @@
                         </div>
                     </a>
                 </div>
-                <!-- <div class="col-lg-4 col-sm-6">
-                    <a class="portfolio-box" href="assets/img/portfolio/fullsize/4.jpg" title="Project Name">
-                        <img class="img-fluid" src="assets/img/portfolio/thumbnails/4.jpg" alt="..." />
+                <div class="col-lg-4 col-sm-6">
+                    <a class="portfolio-box" href="https://mistaya-holiday.itch.io/will-o-wisp-2" title="Will-o-Wisp">
+                        <img class="img-fluid" src="assets/img/portfolio/fullsize/will-o-wisp-2.png"
+                            alt="a screen grab of the top down platformer, will o wisp" />
                         <div class="portfolio-box-caption">
-                            <div class="project-category text-white-50">Category</div>
-                            <div class="project-name">Project Name</div>
+                            <div class="project-category text-white-50">Game Development</div>
+                            <div class="project-name">Will-O-Wisp V2</div>
                         </div>
                     </a>
                 </div>
@@ -171,7 +172,7 @@
                             <div class="project-name">Project Name</div>
                         </div>
                     </a>
-                </div> -->
+                </div>
             </div>
         </div>
     </div>
