--- a/index.html
+++ b/index.html
@@ -156,20 +156,23 @@
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a class="portfolio-box" href="assets/img/portfolio/fullsize/5.jpg" title="Project Name">
-                        <img class="img-fluid" src="assets/img/portfolio/thumbnails/5.jpg" alt="..." />
+                    <a class="portfolio-box" href="bbooksimages.html" title="BindingBooks Group Project">
+                        <img class="img-fluid" src="assets/img/portfolio/bbooks/screenshot.png"
+                            alt="Screenshot of binding books website" />
                         <div class="portfolio-box-caption">
-                            <div class="project-category text-white-50">Category</div>
-                            <div class="project-name">Project Name</div>
+                            <div class="project-category text-white-50">Django Web Development</div>
+                            <div class="project-name">Binding Books-Screenshots</div>
                         </div>
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a class="portfolio-box" href="assets/img/portfolio/fullsize/6.jpg" title="Project Name">
-                        <img class="img-fluid" src="assets/img/portfolio/thumbnails/6.jpg" alt="..." />
-                        <div class="portfolio-box-caption p-3">
-                            <div class="project-category text-white-50">Category</div>
-                            <div class="project-name">Project Name</div>
+                    <a class="portfolio-box" href="https://github.com/SBFlying1/BindingBooks"
+                        title="BindingBooks Group Project">
+                        <img class="img-fluid" src="assets/img/portfolio/bbooks/screenshot2.png"
+                            alt="Screenshot of binding books website" />
+                        <div class="portfolio-box-caption">
+                            <div class="project-category text-white-50">Django Web Development</div>
+                            <div class="project-name">Binding Books-Github</div>
                         </div>
                     </a>
                 </div>
